--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -42,5 +42,8 @@ $tileTextColor: #79B282;
 //contacts-block
 $contactsBlockBackground: #2E2B2C;
 
+//notWork-block
+$notWorkBlockBackground: #2B2829;
+
 //footer
 $footerBackground: linear-gradient(270.7deg, #44403F 0.4%, #211F20 100%);
