promotion card starting, promotion database beta, promotions block

--- a/src/components/Benefits/Benefits.scss
+++ b/src/components/Benefits/Benefits.scss
@@ -21,7 +21,7 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: bottom;
-		bottom: -100px;
+        bottom: -100px;
 
         &::after {
             @include pseudo;
@@ -36,43 +36,50 @@
 
     .descriptions {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column-reverse;
+        align-items: center;
         top: 0;
         left: 0;
         z-index: 3;
+        min-height: 100%;
+    }
 
-        &__button {
-            width: 183px;
-            height: 39px;
-            background: rgba(255, 255, 255, 0.05);
-            color: $primaryText;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(2.5px);
-            border-radius: 10px;
-            text-transform: uppercase;
-            padding-right: 15px;
-            padding-left: 44px;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 10px;
-            line-height: 16px;
-            cursor: pointer;
-            transition: all 1s ease;
-        }
+    .wrapper {
+        min-height: 100%;
+        width: 100%;
+    }
 
-        &__button:hover {
-            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
-            transition: all 1s ease;
-            color: $tileTextColor;
-        }
+    .descriptions__button {
+        width: 183px;
+        height: 39px;
+        background: rgba(255, 255, 255, 0.05);
+        color: $primaryText;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(2.5px);
+        border-radius: 10px;
+        text-transform: uppercase;
+        padding-right: 15px;
+        padding-left: 44px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 10px;
+        line-height: 16px;
+        cursor: pointer;
+        transition: all 1s ease;
+    }
+
+    .descriptions__button:hover {
+        box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.4);
+        transition: all 1s ease;
+        color: $tileTextColor;
     }
 
     .description-block {
         color: $primaryText;
         font-family: "Ubuntu-Light";
         z-index: 3;
-        width: 75%;
-		top: 0;
+        min-width: 75%;
+        top: 0;
         left: 0;
         display: none;
 
@@ -95,13 +102,12 @@
 
     &__buttons {
         display: grid;
-        grid-template-columns: repeat(1, 71px);
-        grid-template-rows: repeat(4, 71px);
+        grid-template-columns: repeat(4, 71px);
+        grid-template-rows: repeat(1, 71px);
         z-index: 2;
         top: 10px;
-		right: 0;
+        right: 0;
         margin: 0;
-        max-width: 40%;
 
         &>* {
             background: rgba(80, 75, 74, 0.9);
@@ -176,10 +182,19 @@
         }
 
         .descriptions {
-            &__button {
-                width: 283px;
-                height: 59px;
-            }
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            top: 0;
+            left: 0;
+            z-index: 3;
+            min-height: 100%;
+        }
+    
+        .wrapper {
+            min-height: 100%;
+            min-width: 50%;
         }
 
         .description-block.active {
@@ -200,9 +215,10 @@
         }
 
         &__buttons {
+            grid-template-columns: repeat(1, 71px);
+            grid-template-rows: repeat(4, 71px);
             right: 0;
             top: 10%;
-            max-width: 25%;
         }
 
         span {
@@ -220,6 +236,11 @@
             min-width: 320px;
             height: 610px;
             padding: 0 20px;
+        }
+
+        .wrapper {
+            min-height: 100%;
+            min-width: 0;
         }
 
         .description-block.active {
@@ -241,7 +262,6 @@
         &__buttons {
             grid-template-columns: repeat(2, 243px);
             grid-template-rows: repeat(2, 243px);
-            max-width: 50%;
             top: 10%;
         }
 
