--- a/src/pages/Main/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/Main/CheckoutPage/CheckoutPage.scss
@@ -605,7 +605,7 @@
 	.input-enterTime.input {
 		margin-bottom: 0px;
 	}
-	
+
 	.toggle-delivery {
 
 		span:not(.base-text) {
@@ -707,6 +707,22 @@
 	}
 }
 
+input:required {
+	position: relative;
+
+	&::before {
+		position: absolute;
+		display: block;
+		content: "\002A";
+		color: $primaryText;
+		font-size: 24px;
+		width: 50px;
+		height: 50px;
+		top: 0;
+		right: 0;
+		z-index: 2222;
+	}
+}
 
 @media screen and (min-width: $tablet ) {
 	.toggle-checkTime {
