promotions page; promotion page desktop, tablet and mobile adaptiv; promotions database pre final version

--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -17,6 +17,8 @@ $full-hd: 1920px;
 
 $primaryText: #fff;
 $secondaryText: #cfcfcf;
+$descriptionText: #A6A7AB;
+$dateText: #6FA076;
 $buttonColor: linear-gradient(114.93deg, #618967 5.11%, #72a479 94%);
 $cardBackground: linear-gradient(90deg, #494544 0%, #504B4A 100%);
 
