--- a/src/components/PromotionCard/PromotionCard.scss
+++ b/src/components/PromotionCard/PromotionCard.scss
@@ -34,7 +34,7 @@
 	}
 
 	&__image {
-		width: 100%;
+		height: 100%;
 	}
 
 	&__main-text {
@@ -88,7 +88,7 @@
 @media screen and (min-width: $desktop) {
 	.promotion-card {
 		&__card-description {
-			height: 6.7em;
+			height: 5.3em;
 		}
 	}
 }
