--- a/src/pages/Main/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/Main/CheckoutPage/CheckoutPage.scss
@@ -561,6 +561,7 @@
     color: $primaryText;
     height: 60px;
 	margin-bottom: 20px;
+	position: relative;
 
 	&:last-of-type {
 		margin-bottom: 30px;
@@ -598,6 +599,13 @@
 	&.active {
 		display: block;
 	}
+}
+
+.personTitle {
+	position: absolute;
+	top: -10px;
+	left: 10px;
+
 }
 
 // media phone-lg
@@ -707,23 +715,6 @@
 	}
 }
 
-input:required {
-	position: relative;
-
-	&::before {
-		position: absolute;
-		display: block;
-		content: "\002A";
-		color: $primaryText;
-		font-size: 24px;
-		width: 50px;
-		height: 50px;
-		top: 0;
-		right: 0;
-		z-index: 2222;
-	}
-}
-
 @media screen and (min-width: $tablet ) {
 	.toggle-checkTime {
 		flex-grow: 1;
@@ -737,7 +728,6 @@ input:required {
 			min-width: max-content;
 		}
 	}
-
 
 	.count-person {
 		max-width: 80%;
