slider width fixed

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -6,7 +6,7 @@
 	padding-top: 50px;
 
 	&__container {
-		@include container;
+		// @include container;
 		display: grid;
 		align-items: flex-start;
 		justify-content: flex-start;
