--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -27,6 +27,8 @@ $cardBackground: linear-gradient(90deg, #494544 0%, #504B4A 100%);
 $contactLinkColor: #65906c;
 $headerBackground: #403c3b;
 $navBackground: linear-gradient(#211f20, #44403f);
+$sectionGradient: linear-gradient(#211f20 100%, #44403f 0%);
+$sectionBackground: linear-gradient();
 $inputSearchColor: #504b4a;
 
 //intro
