--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -82,7 +82,14 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+
 	}
+
+	// &__cart-link {
+	// 	margin: 0;
+	// 	padding: 0;
+	// 	text-decoration: none;
+	// }
 }
 
 .burger-wrapper {
