--- a/src/App.scss
+++ b/src/App.scss
@@ -35,3 +35,13 @@ a {
 		cursor: pointer;
 	}
 }
+
+input.valid,
+input.input.valid  {
+	border: 1px solid green;
+}
+
+input.invalid,
+input.input.invalid{
+	border: 1px solid red;
+}
