cart page being process of styled

--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -6,7 +6,7 @@
 	padding-top: 50px;
 
 	&__container {
-		// @include container;
+		@include container;
 		display: grid;
 		align-items: flex-start;
 		justify-content: flex-start;
@@ -15,7 +15,6 @@
 
 	&__content {
 		height: 500px;
-		max-width: 1440px;
 		overflow: hidden;
 	}
 
