--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -51,3 +51,12 @@ $notWorkBlockBackground: #2B2829;
 
 //footer
 $footerBackground: linear-gradient(270.7deg, #44403F 0.4%, #211F20 100%);
+
+
+
+//cartPage colors
+$cartPageBackground: linear-gradient(360deg, #211F20 0%, #44403F 100%);
+
+$orderBackground: linear-gradient(90deg, #494544 0%, #504B4A 100%);
+$buttonBackground: #72A479;
+$orderSubtitleColor: #a6a7ab;
