--- a/src/pages/Main/CartPage/CartPage.scss
+++ b/src/pages/Main/CartPage/CartPage.scss
@@ -1,10 +1,8 @@
 @import "../../../globalStyles/variables.scss";
 
 .cart-page {
-	height: 1000px;
-	padding-top: 100px;
-	background: $sectionBackground;
 	margin: 0 auto;
+	padding: 100px 0 90px 0;
 
 	&___wrapper {
 		display: block;
@@ -15,6 +13,7 @@
 	margin: 0 auto;
 	margin-bottom: 70px;
 	margin-top: 34px;
+	margin-left: 100px;
 
 	&__path {
 		font-weight: 700;
@@ -23,13 +22,13 @@
 		text-transform: uppercase;
 	}
 
-    &__wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+	&__wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
-        min-width: 350px;
-    }
+		width: 350px;
+	}
 }
 
 .go-back {
@@ -44,9 +43,21 @@
 }
 
 .line {
-    width: 4px;
-    height: 33px;
-    background: $scrollNavBar;
+	width: 4px;
+	height: 33px;
+	background: $scrollNavBar;
+}
+
+.orders {
+	height: auto;
+	width: 100%;
+	border: 0;
+	border-radius: 10px;
+
+	overflow: hidden;
+	// overflow-y: scroll;
+
+	margin-bottom: 40px;
 }
 
 .orders-counter {
@@ -55,4 +66,14 @@
 	line-height: 18px;
 	text-transform: lowercase;
 	color: #72a479;
+}
+
+.dish-offers {
+	&__wrapper {
+		height: 234px;
+		width: 1096px;
+		border: 1px solid black;
+
+		display: flex;
+	}
 }
