--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -60,3 +60,5 @@ $cartPageBackground: linear-gradient(360deg, #211F20 0%, #44403F 100%);
 $orderBackground: linear-gradient(90deg, #494544 0%, #504B4A 100%);
 $buttonBackground: #72A479;
 $orderSubtitleColor: #a6a7ab;
+$offerCardBackground: linear-gradient(90deg, #494544 0%, #504B4A 100%);
+$offerCardSubtitleColor: #c6ced1;
