--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,7 +2,7 @@
 
 .card {
 	border-radius: 10px;
-	width: 325px;
+	width: 320px;
 	height: 400px;
 
 	background: $cardBackground;
@@ -102,7 +102,7 @@
 	}
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: $phone-md) {
 	.card {
 		width: 300px;
 	}
