--- a/src/components/Benefits/Benefits.scss
+++ b/src/components/Benefits/Benefits.scss
@@ -18,7 +18,7 @@
         padding: 10px 10px;
         display: flex;
         background: $headerBackground;
-        background-image: url("../../../public/images/curiza.jpg");
+        background-image: url("../../images/curiza.jpg");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: bottom;
@@ -220,7 +220,7 @@
             z-index: 4;
             min-height: 100%;
         }
-    
+
         .wrapper {
             min-height: 100%;
             min-width: 50%;
