--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,4 +1,4 @@
-@import "../../../globalStyles/variables.scss";
+@import "../../globalStyles/variables.scss";
 
 .cart-page {
 	padding: 100px 0 90px 0;
