--- a/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.scss
@@ -1,5 +1,5 @@
-@import "../../../globalStyles/variables";
-@import "../../../globalStyles/mixins.scss";
+@import "../../globalStyles/variables";
+@import "../../globalStyles/mixins.scss";
 
 .main-checkoutPage {
 	background: $menuNavBarBackground;
@@ -158,6 +158,16 @@
 			&:hover {
 				opacity: 0.8;
 			}
+		}
+	}
+
+	&__submit {
+		cursor: pointer;
+		transition: 0.3s;
+
+		&:hover {
+			opacity: 0.8;
+			transition: 0.3s;
 		}
 	}
 }
@@ -503,6 +513,11 @@
 		margin-left: 0;
 		font-size: 13px;
 		min-width: 100%;
+		cursor: pointer;
+
+		&:hover {
+			opacity: 0.8;
+		}
 	}
 
 	&__input {
@@ -513,12 +528,14 @@
 		min-height: 10px;
 
 		&:checked + label {
+
+
 			&::after {
 				@include pseudo;
 				width: 22px;
 				height: 22px;
 				border: 1px solid $primaryText;
-				background: url('../../../images/checkbox.svg');
+				background: url('../../images/checkbox.svg');
 				background-repeat: no-repeat;
 				background-position: center;
 				background-size: contain;
@@ -539,6 +556,11 @@
 				border-radius: 3px;
 				background: $primaryText;
 				background-color: $primaryText;
+				cursor: pointer;
+
+				&:hover {
+					opacity: 0.8;
+				}
 			}
 		}
 		&:disabled + label {
@@ -607,6 +629,8 @@
 	left: 10px;
 
 }
+
+
 
 // media phone-lg
 @media screen and (min-width: $phone-lg) {
