--- a/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.scss
@@ -11,9 +11,9 @@
 	display: flex;
 	justify-content: space-between;
 	padding: 20px 55px 0 30px;
-  height: 150px;
-  margin-bottom: 20px;
-  border-radius: 0 0 10px 10px;
+	height: 150px;
+	margin-bottom: 20px;
+	border-radius: 0 0 10px 10px;
 
 
 	p:last-of-type {
@@ -231,10 +231,6 @@
 		&:hover {
 			opacity: 0.8;
 		}
-	}
-
-	.tab-adress {
-		display: none;
 	}
 
 	&__span.active {
@@ -547,7 +543,6 @@
 
 		&:checked + label {
 
-
 			&::after {
 				@include pseudo;
 				width: 22px;
@@ -634,11 +629,11 @@
     height: 60px;
 	margin-bottom: 20px;
 
-	display: none;
 
-	&.active {
-		display: block;
-	}
+
+	// &.active {
+	// 	display: block;
+	// }
 }
 
 .personTitle {
@@ -689,7 +684,6 @@
 			flex-grow: 0;
 			margin-bottom: 0;
 			min-width: max-content;
-
 
 			input {
 				text-align: center;
